# o3dmysql

./: .gitignore  CMakeLists.txt  README.md  o3dmysql.files  o3dmysql.includes
include/o3d/mysql/: mysql.h  mysqldb.h  mysqldbvariable.h  mysqlexception.h
src/: CMakeLists.txt  mysqldb.cpp  mysqldbvariable.cpp
test/: CMakeLists.txt  main.cpp
